--- a/app/src/main/res/layout/fragment_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_recycler_view.xml
@@ -6,14 +6,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:animateLayoutChanges="true">
+    android:animateLayoutChanges="true"
+    android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_marginTop="16dp"
+        android:id="@+id/rv_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
         android:layoutAnimation="@anim/anim_layout_recipes"
         android:orientation="vertical"
         android:requiresFadingEdge="vertical"
@@ -28,16 +28,16 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <TextView
-        android:id="@+id/empty_list_title"
+        android:id="@+id/text_empty_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:text="@string/nothing_to_show"
         android:textSize="24sp"
         android:visibility="gone"
-        android:text="@string/nothing_to_show"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
