--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="360dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center">
-    
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardCornerRadius="20dp"
+        android:layout_marginHorizontal="8dp"
         android:backgroundTint="@color/app_background"
-        app:cardElevation="0dp">
+        app:cardCornerRadius="20dp"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:paddingVertical="16dp"
-            android:paddingHorizontal="24dp"
             android:id="@+id/linearLayoutCompat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
             android:gravity="center"
             android:orientation="vertical"
+            android:paddingHorizontal="24dp"
+            android:paddingVertical="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:animateLayoutChanges="true">
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                app:fontFamily="@font/comfortaa"
-                android:textColor="@color/monochrome_invert"
                 android:text="@string/are_you_sure"
-                android:textSize="24sp" />
+                android:textColor="@color/monochrome_invert"
+                android:textSize="24sp"
+                app:fontFamily="@font/comfortaa" />
 
             <View
                 android:layout_width="match_parent"
@@ -46,24 +50,24 @@
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:layout_marginBottom="8dp">
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/cancel"
+                    android:id="@+id/btn_cancel"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
+                    android:layout_marginHorizontal="4dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:backgroundTint="@color/black"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_cross"
-                    android:backgroundTint="@color/black"
-                    android:background="?android:attr/selectableItemBackground"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginHorizontal="4dp"
-                    app:tint="@color/login_tint"/>
+                    app:tint="@color/login_tint" />
 
                 <View
                     android:layout_width="2dp"
@@ -73,18 +77,18 @@
                     android:background="@drawable/selector_input" />
 
                 <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/confirm"
+                    android:id="@+id/btn_confirm"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
+                    android:layout_marginHorizontal="4dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:backgroundTint="@color/black"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_check"
-                    android:backgroundTint="@color/black"
-                    android:background="?android:attr/selectableItemBackground"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginHorizontal="4dp"
-                    app:tint="@color/deep_orange_light"/>
+                    app:tint="@color/deep_orange_light" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
