--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -1,62 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="360dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center">
-    
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardCornerRadius="20dp"
+        android:layout_marginHorizontal="8dp"
         android:backgroundTint="@color/app_background"
-        app:cardElevation="0dp">
+        app:cardCornerRadius="20dp"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:paddingVertical="16dp"
-            android:paddingHorizontal="24dp"
-            android:id="@+id/linearLayoutCompat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
             android:gravity="center"
             android:orientation="vertical"
+            android:paddingHorizontal="24dp"
+            android:paddingVertical="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:animateLayoutChanges="true">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:orientation="horizontal"
                 android:layout_weight="1"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/user"
+                    android:id="@+id/text_user"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    app:fontFamily="@font/comfortaa"
-                    android:textColor="@color/monochrome_invert"
                     android:text="@string/user"
-                    android:textSize="24sp" />
+                    android:textColor="@color/monochrome_invert"
+                    android:textSize="24sp"
+                    app:fontFamily="@font/comfortaa" />
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/premium"
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/image_premium"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:scaleType="fitCenter"
+                    android:layout_gravity="center"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="2dp"
-                    android:layout_gravity="center"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:backgroundTint="@color/deep_orange_light"
+                    android:contentDescription="@string/premium"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/ic_premium"
                     android:visibility="gone"
-                    android:backgroundTint="@color/deep_orange_light"
-                    android:background="?android:attr/selectableItemBackground"
-                    app:tint="@color/deep_orange_light"/>
+                    app:tint="@color/deep_orange_light" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -69,89 +74,89 @@
                 android:background="@drawable/selector_input" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/about_app"
+                android:id="@+id/ll_about"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:orientation="horizontal"
-                android:layout_weight="1"
                 android:layout_marginBottom="4dp"
-                android:gravity="center_vertical">
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:layout_weight="1"
                     android:layout_marginEnd="8dp"
-                    android:text="@string/about_app" />
+                    android:layout_weight="1"
+                    android:text="@string/about_app"
+                    android:textSize="18sp" />
 
-                <androidx.appcompat.widget.AppCompatImageButton
+                <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:backgroundTint="@color/black"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_forward"
-                    android:backgroundTint="@color/black"
-                    android:background="?android:attr/selectableItemBackground"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/login_tint"/>
+                    app:tint="@color/login_tint" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/buy_premium"
+                android:id="@+id/ll_donate"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:orientation="horizontal"
-                android:layout_weight="1"
                 android:layout_marginBottom="8dp"
-                android:gravity="center_vertical">
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:layout_weight="1"
                     android:layout_marginEnd="8dp"
-                    android:text="@string/buy_premium" />
+                    android:layout_weight="1"
+                    android:text="@string/buy_premium"
+                    android:textSize="18sp" />
 
-                <androidx.appcompat.widget.AppCompatImageButton
+                <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:backgroundTint="@color/black"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_forward"
-                    android:backgroundTint="@color/black"
-                    android:background="?android:attr/selectableItemBackground"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/login_tint"/>
+                    app:tint="@color/login_tint" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_weight="1"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:layout_weight="1"
                     android:layout_marginEnd="8dp"
-                    android:text="@string/open_shopping_list_by_default" />
+                    android:layout_weight="1"
+                    android:text="@string/open_shopping_list_by_default"
+                    android:textSize="18sp" />
 
                 <androidx.appcompat.widget.SwitchCompat
-                    android:id="@+id/shopping_list_default"
+                    android:id="@+id/switch_shopping_list_default"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="false"
                     android:thumb="@drawable/thumb"
-                    app:track="@drawable/selector_track"/>
+                    app:track="@drawable/selector_track" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -163,13 +168,13 @@
                 android:background="@drawable/selector_input" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/logout"
+                android:id="@+id/btn_logout"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/selector_button"
                 android:text="@string/log_out"
-                android:textColor="@color/deep_orange_dark"
-                android:layout_marginBottom="8dp"/>
+                android:textColor="@color/deep_orange_dark" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
