--- a/app/src/main/res/layout/dialog_shopping_list.xml
+++ b/app/src/main/res/layout/dialog_shopping_list.xml
@@ -1,39 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="360dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center">
-    
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardCornerRadius="20dp"
+        android:layout_marginHorizontal="8dp"
         android:backgroundTint="@color/app_background"
-        app:cardElevation="0dp">
+        app:cardCornerRadius="20dp"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:paddingVertical="16dp"
-            android:paddingHorizontal="24dp"
-            android:id="@+id/linearLayoutCompat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
             android:gravity="center"
             android:orientation="vertical"
+            android:paddingHorizontal="24dp"
+            android:paddingVertical="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:animateLayoutChanges="true">
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                app:fontFamily="@font/comfortaa"
-                android:textColor="@color/monochrome_invert"
                 android:text="@string/add_item"
-                android:textSize="28sp" />
+                android:textColor="@color/monochrome_invert"
+                android:textSize="28sp"
+                app:fontFamily="@font/comfortaa" />
 
             <View
                 android:layout_width="match_parent"
@@ -43,17 +47,17 @@
                 android:background="@drawable/selector_input" />
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/item"
+                android:id="@+id/input_item"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="@string/broccoli"
-                android:textSize="24sp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/selector_input"
+                android:hint="@string/broccoli"
                 android:paddingHorizontal="8dp"
-                android:layout_marginBottom="16dp"/>
+                android:textSize="24sp" />
 
             <Button
-                android:id="@+id/add_item"
+                android:id="@+id/btn_add_item"
                 style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
