--- a/app/src/main/res/layout/fragment_recipe_cooking.xml
+++ b/app/src/main/res/layout/fragment_recipe_cooking.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:orientation="vertical"
     android:requiresFadingEdge="vertical"
-    android:scrollbars="none"
-    android:animateLayoutChanges="true">
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,30 +18,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:fontFamily="@font/comfortaa_semibold"
             android:text="@string/cooking"
             android:textColor="@color/monochrome_invert"
-            android:textSize="32sp" />
+            android:textSize="32sp"
+            app:fontFamily="@font/comfortaa_semibold" />
 
         <TextView
-            android:id="@+id/time"
+            android:id="@+id/text_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="36dp"
             android:text="@string/_15_min"
             android:textColor="@color/navigation_foreground"
-            android:textSize="24sp"
-            android:layout_marginBottom="36dp"/>
+            android:textSize="24sp" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/cooking_recycler_view"
+            android:id="@+id/rv_steps"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/list_steps"
-            tools:itemCount="2"
-            android:nestedScrollingEnabled="false"
             android:clickable="true"
-            android:focusable="true" />
+            android:focusable="true"
+            android:nestedScrollingEnabled="false"
+            tools:itemCount="2"
+            tools:listitem="@layout/list_steps" />
 
     </LinearLayout>
 
