--- a/app/src/main/res/layout/fragment_recipe_ingredients.xml
+++ b/app/src/main/res/layout/fragment_recipe_ingredients.xml
@@ -4,36 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:orientation="vertical"
     android:requiresFadingEdge="vertical"
-    android:scrollbars="none"
-    android:animateLayoutChanges="true">
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:animateLayoutChanges="true">
+        android:animateLayoutChanges="true"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fontFamily="@font/comfortaa_semibold"
+            android:layout_gravity="center"
             android:text="@string/ingredients"
             android:textColor="@color/monochrome_invert"
             android:textSize="32sp"
-            android:layout_gravity="center"/>
+            app:fontFamily="@font/comfortaa_semibold" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="36dp"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:layout_marginBottom="36dp">
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/servings"
+                android:id="@+id/text_servings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/_12_servings"
@@ -41,49 +41,49 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/divider"
+                android:id="@+id/text_divider"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/divider"
-                android:gravity="center"
-                android:layout_marginBottom="1dp"
                 android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="1dp"
+                android:gravity="center"
+                android:text="@string/divider"
                 android:textColor="@color/deep_orange_light"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/calories"
+                android:id="@+id/text_calories"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/_1700_kcal"
                 android:textColor="@color/navigation_foreground"
-                android:textSize="24sp"/>
+                android:textSize="24sp" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/ingredients_recycler_view"
+            android:id="@+id/rv_ingredients"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/list_ingredients"
-            tools:itemCount="2"
-            android:nestedScrollingEnabled="false"
             android:clickable="true"
-            android:focusable="true"/>
+            android:focusable="true"
+            android:nestedScrollingEnabled="false"
+            tools:itemCount="2"
+            tools:listitem="@layout/list_ingredients" />
 
         <Button
-            android:id="@+id/add_to_shoplist"
-            android:layout_marginTop="16dp"
+            android:id="@+id/btn_add_to_shoplist"
             style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/montserrat"
             android:text="@string/to_shopping_list"
             android:textColor="@color/deep_orange_light"
-            app:icon="@drawable/ic_add"
-            app:iconTint="@color/deep_orange_light"
             android:visibility="gone"
-            android:layout_gravity="center"/>
+            app:icon="@drawable/ic_add"
+            app:iconTint="@color/deep_orange_light" />
 
     </LinearLayout>
 
