--- a/app/src/main/res/layout/fragment_recipe_menu.xml
+++ b/app/src/main/res/layout/fragment_recipe_menu.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:orientation="vertical"
     android:requiresFadingEdge="vertical"
     android:scrollbars="none"
-    android:animateLayoutChanges="true"
     android:weightSum="1">
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/recipe_view_pager"
+        android:id="@+id/vp_recipe"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_dots"
@@ -21,6 +21,6 @@
         android:layout_height="wrap_content"
         app:tabBackground="@drawable/tab_selector"
         app:tabGravity="center"
-        app:tabIndicatorHeight="0dp"/>
+        app:tabIndicatorHeight="0dp" />
 
 </LinearLayout>
