--- a/app/src/main/res/layout/fragment_recipes_dashboard.xml
+++ b/app/src/main/res/layout/fragment_recipes_dashboard.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/scroll_view"
+        android:id="@+id/sv_dashboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
@@ -18,23 +18,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:animateLayoutChanges="true"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/search_layout"
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/ll_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:animateLayoutChanges="true"
                 android:orientation="horizontal">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/search_field"
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/input_search"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_weight="1"
@@ -47,7 +47,7 @@
                     android:paddingHorizontal="16dp" />
 
                 <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/clear_search"
+                    android:id="@+id/btn_clear_search"
                     style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                     android:layout_width="36dp"
                     android:layout_height="48dp"
@@ -57,10 +57,10 @@
                     android:src="@drawable/ic_cross"
                     android:visibility="gone" />
 
-            </LinearLayout>
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
             <LinearLayout
-                android:id="@+id/function_buttons"
+                android:id="@+id/ll_functions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
@@ -69,7 +69,7 @@
                 android:weightSum="3">
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/add_recipe"
+                    android:id="@+id/btn_add_recipe"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
@@ -86,6 +86,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:maxLines="1"
                         android:paddingVertical="16dp"
                         android:text="@string/add"
                         android:textColor="@color/monochrome_invert"
@@ -96,7 +97,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/favourite"
+                    android:id="@+id/btn_favourite"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="4dp"
@@ -110,6 +111,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:maxLines="1"
                         android:paddingVertical="16dp"
                         android:text="@string/favourite"
                         android:textColor="@color/monochrome_invert"
@@ -120,7 +122,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/categories"
+                    android:id="@+id/btn_categories"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
@@ -134,6 +136,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:maxLines="1"
                         android:paddingVertical="16dp"
                         android:text="@string/categories"
                         android:textColor="@color/monochrome_invert"
@@ -146,7 +149,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/popular_title"
+                android:id="@+id/text_recently_added"
                 style="@style/TextAppearance.AppCompat.Headline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -155,7 +158,7 @@
                 app:fontFamily="@font/comfortaa_semibold" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/popular_recycler_view"
+                android:id="@+id/rv_recently_added"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -164,7 +167,7 @@
                 android:requiresFadingEdge="horizontal" />
 
             <TextView
-                android:id="@+id/all_recipes_title"
+                android:id="@+id/text_all_recipes"
                 style="@style/TextAppearance.AppCompat.Headline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -173,28 +176,28 @@
                 app:fontFamily="@font/comfortaa_semibold" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recipes_recycler_view"
+                android:id="@+id/rv_all_recipes"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
                 android:nestedScrollingEnabled="false"
                 tools:listitem="@layout/list_recipes" />
 
-        </LinearLayout>
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.core.widget.NestedScrollView>
 
     <TextView
-        android:id="@+id/empty_list_title"
+        android:id="@+id/text_empty_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:text="@string/nothing_to_show"
         android:textSize="24sp"
         android:visibility="gone"
-        android:text="@string/nothing_to_show"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/scroll_view"/>
+        app:layout_constraintTop_toBottomOf="@id/sv_dashboard" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
