--- a/app/src/main/res/layout/list_ingredients.xml
+++ b/app/src/main/res/layout/list_ingredients.xml
@@ -1,40 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/app_background"
     android:foreground="?attr/selectableItemBackground">
 
     <data>
-        <import type="android.view.View"/>
+
+        <import type="android.view.View" />
+
         <variable
             name="ingredient"
             type="com.cactusknights.chefbook.models.Ingredient" />
     </data>
 
     <LinearLayout
-        android:id="@+id/ingredient_view"
+        android:id="@+id/ll_ingredient"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/add_to_shoplist"
+            android:id="@+id/checkbox_add_to_shopping_list"
             style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="8dp"
+            android:button="@drawable/selector_checkbox"
             android:src="@drawable/ic_add"
             android:visibility="@{ingredient.isSection? View.GONE:View.VISIBLE}"
-            android:button="@drawable/selector_checkbox"
             app:tint="@color/deep_orange_light" />
 
         <TextView
-            android:id="@+id/ingredient_name"
+            android:id="@+id/text_name"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:fontFamily="@font/comfortaa_bold"
             android:text="@{ingredient.name}"
             android:textSize="24sp"
