--- a/app/src/main/res/layout/list_popular.xml
+++ b/app/src/main/res/layout/list_popular.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="144dp"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/input_background"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:cardCornerRadius="8dp"
     android:layout_marginStart="8dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardBackgroundColor="@color/input_background"
+    app:cardCornerRadius="8dp"
     app:cardElevation="0dp">
 
     <LinearLayout
@@ -18,7 +17,7 @@
         android:padding="8dp">
 
         <TextView
-            android:id="@+id/recipe_time"
+            android:id="@+id/text_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -28,7 +27,7 @@
             android:textColor="@color/time_popular" />
 
         <TextView
-            android:id="@+id/recipe_name"
+            android:id="@+id/text_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
