--- a/app/src/main/res/layout/list_steps_edit.xml
+++ b/app/src/main/res/layout/list_steps_edit.xml
@@ -1,77 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="step"
             type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp">
+        android:layout_marginBottom="12dp"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="top"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:gravity="top">
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
                 android:layout_marginEnd="8dp"
+                android:gravity="center"
+                android:orientation="vertical"
                 tools:ignore="UseCompoundDrawables">
 
                 <TextView
-                    android:id="@+id/number"
+                    android:id="@+id/text_number"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:paddingHorizontal="0dp"
-                    android:text="@string/_1"
+                    android:background="@drawable/selector_search"
                     android:gravity="center"
-                    android:background="@drawable/selector_search" />
+                    android:paddingHorizontal="0dp"
+                    android:text="@string/_1" />
 
                 <ImageView
                     style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
+                    android:contentDescription="@string/divider"
                     android:padding="0dp"
-                    android:src="@drawable/ic_rows"
-                    android:contentDescription="@string/divider" />
+                    android:src="@drawable/ic_rows" />
 
             </LinearLayout>
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/description"
+                android:id="@+id/input_step"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="top"
                 android:layout_weight="3"
                 android:background="@drawable/selector_input"
+                android:gravity="top"
                 android:hint="@string/step"
-                android:minLines="2"
-                android:text="@={step}"
                 android:imeOptions="actionNext"
+                android:minLines="2"
                 android:paddingHorizontal="8dp"
-                android:paddingVertical="4dp"/>
+                android:paddingVertical="4dp"
+                android:text="@={step}" />
 
             <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/delete_step"
+                android:id="@+id/btn_delete_step"
                 style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                 android:layout_width="36dp"
                 android:layout_height="48dp"
-                android:paddingEnd="0dp"
                 android:paddingStart="4dp"
+                android:paddingEnd="0dp"
                 android:src="@drawable/ic_cross" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
